tdf#157790 invert alpha mask

Due to commit 81994cb2b8b32453a92bcb011830fcb884f22ff3,
the alpha mask needs to be inverted.

Change-Id: I4771c5f6f3a08fb210b62a0533df895a4a476058
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158410
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>